log
Fri, May 16, 2025  6:49:20 PM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Fri, May 16, 2025  6:50:02 PM: 
 tests:  0|5
total_score: 0/70
67eba21
Sat, May 17, 2025 11:21:20 AM: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  0|5
total_score: 0/70
ceda21e
Sat, May 17, 2025 11:25:56 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3e4c610
Sat, May 17, 2025 11:26:49 AM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
f09f187
Sat, May 17, 2025 11:30:35 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
92ec06e
Sat, May 17, 2025 11:49:14 AM: 
 sudoku.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
8b04f9f
Sat, May 17, 2025 11:56:20 AM: 
 sudoku.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
120fdc9
Sat, May 17, 2025 11:56:58 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
16c08a3
Sat, May 17, 2025 11:57:48 AM: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
b1e15c2
Sat, May 17, 2025 11:59:52 AM: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
0074630
Sat, May 17, 2025 12:03:12 PM: 
 sudoku.c | 15 ++++++---------
 1 file changed, 6 insertions(+), 9 deletions(-)
 tests:  2|4
total_score: 15/70
4dfc4b1
Sat, May 17, 2025 12:04:00 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
012e940
